--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -537,7 +537,7 @@
 			
 			var app = applications[video_data.elemId];
 			if(app !== undefined && app !== null){
-				app.event("videoTimeSync", null, null, null, {videoTime: video_data.time, delay: delay, play: video_data.play}, sentTime);
+				app.event("videoTimeSync", null, null, {videoTime: video_data.time, delay: delay, play: video_data.play}, sentTime);
 			}
 		});
 		
@@ -552,19 +552,24 @@
 		
 		wsio.on('eventInItem', function(event_data){
 			var date = new Date(event_data.date);
-			var app  = applications[event_data.elemId];
+			var app  = applications[event_data.id];
+			
+			app.event(event_data.type, event_data.position, event_data.user, event_data.data, date);
+			
+			/*
 			// adding pointer information to the event
             event_data.data.pname  = event_data.user_label;
             event_data.data.pcolor = event_data.user_color;
 			app.event(event_data.eventType, event_data.user_id, event_data.itemRelativeX, event_data.itemRelativeY, event_data.data, date);
+			*/
 		});
 
-		wsio.on('pointerPressRight', function(data){
+		wsio.on('requestNewControl', function(data){
 			var dt = new Date(data.date);
 			var selectedElem = data.elemId ? document.getElementById(data.elemId) : null;
-			if (data.elemId != null){
-				if(data.elemId+"_controls" in  controlItems){
-					var size = computeSize(controlItems[data.elemId+ "_controls"].spec) ;
+			if (data.elemId !== undefined && data.elemId !== null){
+				if(controlItems[data.elemId+"_controls"] !== undefined){
+					var size = computeSize(controlItems[data.elemId+ "_controls"].spec);
 					console.log(size);
 					wsio.emit('addNewControl', {
 						id:data.elemId+"_controls", 
