--- a/public_HTTPS/audioManager.html
+++ b/public_HTTPS/audioManager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-<meta charset="utf-,8">
+<meta charset="utf-8">
 <title>SAGE2 Audio Manager</title>
 
 <script type="text/javascript">
