--- a/public_HTTPS/sagePointer.html
+++ b/public_HTTPS/sagePointer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-<meta charset="utf-,8">
+<meta charset="utf-8">
 <title>SAGE2 Pointer</title>
 
 <script type="text/javascript">
@@ -19,7 +19,7 @@
 <script type="text/javascript">
 	function init() {
 		// open SAGE Pointer App in new window
-		var url = window.location.origin + "/sagePointerApp.html";
+		var url = "sagePointerApp.html";
 		var name = "";
 		var specs = "left=0,top=0,width=450,height=125,location=no";
 		var newWin = window.open(url, name, specs);
