--- a/public_HTTPS/sagePointerApp.html
+++ b/public_HTTPS/sagePointerApp.html
@@ -17,6 +17,7 @@
 </script>
 
 <script type="text/javascript" src="src/websocket.io.js"></script>
+<script type="text/javascript" src="src/webgl_texture2buffer.js"></script>
 <script type="text/javascript" src="src/sagePointer.js"></script>
 <script type="text/javascript">
 	window.URL = (window.URL || window.webkitURL || window.msURL || window.oURL);
@@ -151,6 +152,16 @@
 	function closeSettings(event) {
 		document.getElementById("settings").style.display = "none";
 	}
+	
+	
+	function Uint8Concat(uint8_1, uint8_2) {
+    	var concat = new Uint8Array(uint8_1.length + uint8_2.length);
+    	concat.set(uint8_1, 0);
+    	concat.set(uint8_2, uint8_1.length);
+    	
+    	return concat;
+    }
+	
 </script>
 
 <link rel="stylesheet" type="text/css" href="css/style_pointer.css" media="screen" />
